--- a/Testcase/ex1.html
+++ b/Testcase/ex1.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+    <title>My Page</title>
+</head>    
 <body>
   <h1>Hello!</h1>
   <a href="/other-page">A link to another page</a>
